--- a/test/index.html
+++ b/test/index.html
@@ -67,7 +67,7 @@
         data: data,
         event: {
             showAlert: function() {
-                alert(this.data.slogan);
+                alert(this.slogan);
             }
         }
     });
