For temp update.

--- a/examples/index.html
+++ b/examples/index.html
@@ -27,7 +27,9 @@
         <button bp-event:click="@:doneTodoItem">- Done -</button>
     </li>
   </ul>
-  <button bp-bind:name="name" bp-event:click="reverseName" bp-model="name"></button>
+  <button bp-bind:name="name" bp-event:click="reverseName" bp-model="name">{{ff}}<p>asdf</p></button>
+  <button>{{ff}}dfadsf<p>asdf</p>asfasdf{{333}}<p>asdf</p>asfasdf{{333}}</button>
+  <input type="text" bp-computed="">
 </div>
 
 <script src="../dist/ballpen.min.js"></script>
