--- a/examples/watcher.html
+++ b/examples/watcher.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ballpen.js - 'Watcher' template</title>
+    <title>Ballpen.js - 'Data Watcher'</title>
 </head>
 <body>
 
 <div id="app">
-  <h1>Ballpen.js - 'Watcher' template</h1>
+  <h1>Ballpen.js - 'Data Watcher'</h1>
 
   <p>{{ infoList.name }}</p>
   <input type="text" bp-model="infoList.name" bp-event:input="syncName"></input>
@@ -24,7 +24,7 @@
         }
     };
 
-    window.a = new Ballpen("#app", {
+    new Ballpen("#app", {
         data: data,
         events: {
             syncName: (el, context, args) => {
@@ -37,10 +37,20 @@
                 handler: (getter, setter) => {
                     // Use 'getter' when reading an attribute's value, use 'setter' when changing an attribute's value
                     if (getter.name !== "Ballpen.js") {
-                        // If you add a '$' symbol before an attribute, the change on this attribute will be ignored by watchers
                         setter.modified = false;
                     } else {
                         setter.modified = true;
+                    }
+
+                    if (getter.lists[0] === 0) {
+                        console.log('Go ahead from watcher -> "watcher:infoList"!');
+                    }
+                }
+            },
+            "infoList.lists": {
+                handler: (getter, setter) => {
+                    if (getter[0] === 0) {
+                        console.log('Go ahead from watcher -> "watcher:infoList.lists"!');
                     }
                 }
             }
