--- a/examples/lifecycle.html
+++ b/examples/lifecycle.html
@@ -26,7 +26,7 @@
         version: "1.0"
     };
 
-    window.a = new Ballpen("#app", {
+    new Ballpen("#app", {
         data: data,
         lifecycle: {
             beforeRender: (resolve, reject, context) => {
