--- a/examples/plugin-http.html
+++ b/examples/plugin-http.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ballpen.js - 'Lifecycle Hook Point'</title>
+    <title>Ballpen.js - 'Plugin - $http'</title>
     <style type="text/css">
         [bp-shade] {
             display: none;
@@ -11,7 +11,7 @@
 <body>
 
 <div id="app" bp-shade>
-  <h1>Ballpen.js - 'Lifecycle Hook Point'</h1>
+  <h1>Ballpen.js - 'Plugin - $http'</h1>
 
   <p>This is {{ name }}, welcome to use! (<span>v{{ version }}</span>)</p>
 
