--- a/examples/bp-for.html
+++ b/examples/bp-for.html
@@ -89,7 +89,7 @@
         name: "Ballpen.js"
     };
 
-    window.a = new Ballpen("#app", {
+    new Ballpen("#app", {
         data: data
     });
 
