--- a/examples/core-computed.html
+++ b/examples/core-computed.html
@@ -19,7 +19,7 @@
         appendix: "####"
     };
 
-    new Ballpen("#app", {
+    window.a =new Ballpen("#app", {
         data: data,
         computed: {
           name: (getter) => {
