Complete 'Computed Attributes' feature.

--- a/examples/core-computed.html
+++ b/examples/core-computed.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ballpen.js - 'Computed'</title>
+    <title>Ballpen.js - 'Computed Attributes'</title>
 </head>
 <body>
 
 <div id="app">
-  <h1>Ballpen.js - 'Computed'</h1>
+  <h1>Ballpen.js - 'Computed Attributes'</h1>
 
   <p>{{ *name }}</p>
+  <p>{{ name }}</p>
+  <p>{{ appendix }}</p>
+  <button bp-event:click="ALTER">ALTER</button>
 </div> 
 
 <script src="../dist/ballpen.min.js"></script>
@@ -19,11 +22,16 @@
         appendix: "####"
     };
 
-    window.a =new Ballpen("#app", {
+    new Ballpen("#app", {
         data: data,
         computed: {
           name: (getter) => {
             return `This value was computed -> ${getter.name + getter.appendix}`;
+          }
+        },
+        events: {
+          ALTER: (el, context) => {
+            context.name = context.name.split('.').reverse().join('.');
           }
         }
     });
