--- a/examples/bp-for.html
+++ b/examples/bp-for.html
@@ -102,7 +102,7 @@
         author: "YHSPY"
     };
 
-    window.a = new Ballpen("#app", {
+    new Ballpen("#app", {
         data: data
     });
 
